Update GET user with conditions (swagger updated)
